--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
-    <title>Mood Board - Creative HTML5 Template</title>
+    <title>Mood Board</title>
 <!--
 Mood Board Template
 https://templatemo.com/tm-528-Mood Board
@@ -53,13 +53,13 @@ https://templatemo.com/tm-528-Mood Board
                             <button type="button" class="navbar-toggle"> <i class="fa fa-bars"></i> </button>
                             <div class="nav-box navbar-collapse">
                                 <ul class="navigation-menu nav navbar-nav navbars" id="nav">
-                                    <li data-menuanchor="slide01" class="active"><a href="#slide01">Home</a></li>
-                                    <li data-menuanchor="slide02"><a href="#slide02">About Me</a></li>
-                                    <li data-menuanchor="slide03"><a href="#slide03">Services</a></li>
-                                    <li data-menuanchor="slide04"><a href="#slide04">My Skills</a></li>
-                                    <li data-menuanchor="slide05"><a href="#slide05">My Work</a></li>
-                                    <li data-menuanchor="slide06"><a href="#slide06">Testimonials</a></li>
-                                    <li data-menuanchor="slide07"><a href="#slide07">Contact Me</a></li>
+                                    <li data-menuanchor="slide01" class="active"><a href="#slide01">Happy</a></li>
+                                    <li data-menuanchor="slide02"><a href="#slide02">Disgust</a></li>
+                                    <li data-menuanchor="slide03"><a href="#slide03">Fear</a></li>
+                                    <li data-menuanchor="slide04"><a href="#slide04">Angry</a></li>
+                                    <li data-menuanchor="slide05"><a href="#slide05">Sad</a></li>
+                                    <li data-menuanchor="slide06"><a href="#slide06">Surpise</a></li>
+                                    <li data-menuanchor="slide07"><a href="#slide07">Neutral</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -69,7 +69,7 @@ https://templatemo.com/tm-528-Mood Board
         </header>
 
         <video autoplay muted loop id="myVideo">
-          <source src="images/video-bg.mp4" type="video/mp4">
+          <source src="images/video-bg.mp4" type="video/mp4" id="bgVideo">
         </video>
 
         <div id="fullpage" class="fullpage-default">
@@ -79,13 +79,13 @@ https://templatemo.com/tm-528-Mood Board
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
                         <h1 class="welcome-title animate" data-animate="fadeInUp">Mood Board</h1>
-                        <p class="animate" data-animate="fadeInUp">This is a clean and modern HTML5 template with a video background. You can use this layout for your profile page. Please spread a word about templatemo to your friends. Thank you.</p>
-                        <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
+                        <p class="animate" data-animate="fadeInUp"><a id="sad">Sad</a></p>
+                        <div class="scroll-down next-section animate data-animate="fadeInUp""></div>
                     </div>
                 </div>
             </div>
 
-            <div class="section animated-row" data-section="slide02">
+            <!-- <div class="section animated-row" data-section="slide02">
                 <div class="section-inner">
                     <div class="about-section">
                         <div class="row justify-content-center">
@@ -426,11 +426,55 @@ https://templatemo.com/tm-528-Mood Board
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
+            <!-- <div class="section animated-row" data-section="slide07">
+                <div class="section-inner">
+                    <div class="row justify-content-center">
+                        <div class="col-md-7 wide-col-laptop">
+                            <div class="title-block animate" data-animate="fadeInUp">
+                                <span>Contact</span>
+                                <h2>Get In Touch!</h2>
+                            </div>
+                            <div class="contact-section">
+                                <div class="row">
+                                    <div class="col-md-6 animate" data-animate="fadeInUp">
+                                        <div class="contact-box">
+                                            <div class="contact-row">
+                                                <i class="fa fa-map-marker"></i> 123 New Street Here, Wonderful City 10220
+                                            </div>
+                                            <div class="contact-row">
+                                                <i class="fa fa-phone"></i> 090 080 0210
+                                            </div>
+                                            <div class="contact-row">
+                                                <i class="fa fa-envelope"></i> info@company.co
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 animate" data-animate="fadeInUp">
+                                        <form id="ajax-contact" method="post" action="#">
+                                            <div class="input-field">
+                                                <input type="text" class="form-control" name="name" id="name" required placeholder="Name">
+                                            </div>
+                                            <div class="input-field">
+                                                <input type="email" class="form-control" name="email" id="email" required placeholder="Email">
+                                            </div>
+                                            <div class="input-field">
+                                                <textarea class="form-control" name="message" id="message" required placeholder="Message"></textarea>
+                                            </div>
+                                            <button class="btn" type="submit">Submit</button>
+                                        </form>
+                                        <div id="form-messages" class="mt-3"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
         </div>
 
-        <div id="social-icons">
+        <!-- <div id="social-icons">
             <div class="text-right">
                 <ul class="social-icons">
                     <li><a href="#" title="Facebook"><i class="fa fa-facebook"></i></a></li>
@@ -439,7 +483,7 @@ https://templatemo.com/tm-528-Mood Board
                     <li><a href="#" title="Instagram"><i class="fa fa-behance"></i></a></li>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </div>  
 
     <script src="js/jquery.js"></script>
