sad video change added

--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@ https://templatemo.com/tm-528-Mood Board
             </div>
         </header>
 
-        <video autoplay muted loop id="myVideo">
-          <source src="images/video-bg.mp4" type="video/mp4" id="bgVideo">
-        </video>
+        <div id="divVideo">
+            <video autoplay muted loop>
+                <source src="images/video-bg.mp4" type="video/mp4">
+            </video>
+        </div>
 
         <div id="fullpage" class="fullpage-default">
 
