--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ https://templatemo.com/tm-528-Mood Board
 
         <div id="divVideo">
             <video autoplay muted loop>
-                <source src="images/video-bg.mp4" type="video/mp4">
+                <source src="images/happy.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -81,7 +81,10 @@ https://templatemo.com/tm-528-Mood Board
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
                         <h1 class="welcome-title animate" data-animate="fadeInUp">Mood Board</h1>
-                        <p class="animate" data-animate="fadeInUp"><a id="sad">Sad</a></p>
+                        <p class="animate" data-animate="fadeInUp">
+                            <a id="happy">Happy </a>
+                            <a id="sad"> Sad</a>
+                        </p>
                         <div class="scroll-down next-section animate data-animate="fadeInUp""></div>
                     </div>
                 </div>
